Add HTML doctype and language attribute to README

--- a/README.html
+++ b/README.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="es" data-lt-installed="true"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="csrf-token" content="RXv8QbajgGvDG6j7nRRbD3byMsvvxDaVjRw8Z5f2">
         <title>LTM | Licencias de Tránsito Municipal</title>
